Changing the filename of a image strip doesnt refresh sequencer #36570

Closed
opened 2013-08-26 15:38:38 +02:00 by Jonata Bolzan · 3 comments

%%%--- Operating System, Graphics card ---
MacOS X 10.7

- Blender version with error, and version that worked ---

2.68a

- Short description of error ---

Changing the "File" field on "Strip Input" doesn't refresh the sequencer - there isn't a feedback about change of file.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open a new sequence. Add some image strip. Put the cursor above the strip. On "Strip Input", "File", change the filename to another image file. Press Enter. The preview doesn't updates the image. It can be done pressing "Refresh Sequence" button, and there is the need to press it every time a filename changes. %%%

%%%--- Operating System, Graphics card --- MacOS X 10.7 - Blender version with error, and version that worked --- 2.68a - Short description of error --- Changing the "File" field on "Strip Input" doesn't refresh the sequencer - there isn't a feedback about change of file. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open a new sequence. Add some image strip. Put the cursor above the strip. On "Strip Input", "File", change the filename to another image file. Press Enter. The preview doesn't updates the image. It can be done pressing "Refresh Sequence" button, and there is the need to press it every time a filename changes. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r59622.%%%

%%%fixed r59622.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36570
No description provided.