fix [#36570] Changing the filename of a image strip doesnt refresh sequencer

was casting a StripElem as a Sequencer struct.